--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title>Overall submit</title>
 </head>
 <body>
-    <a href="bugOne/bugFixCodeOne.html" target="_blank">Task 1</a>
-    <a href="bugTwo/bugTwo.html" target="_blank">Task 2</a>
-    <a href="ContactUsForm/contactUs.html" target="_blank">Task 3</a>
-    <a href="List/list.html" target="_blank">Task 4</a>
-    <a href="GoogleLink/linkElement.html" target="_blank">Task 5</a>
-    <a href="radioButton/radioButtonExample.html" target="_blank">Task 6</a>
-    <a href="simpleForm/simpleFormElement.html" target="_blank">Task 9</a>
-    <a href="highlitingText/highlighting.html" target="_blank">Task 10</a>
-    <a href="allInputElements/allInputElements.html" target="_blank">Task 11</a>
+    <a href="bugOne/bugFixCodeOne.html" target="_blank">Task 1</a><br>
+    <a href="bugTwo/bugTwo.html" target="_blank">Task 2</a><br>
+    <a href="ContactUsForm/contactUs.html" target="_blank">Task 3</a><br>
+    <a href="List/list.html" target="_blank">Task 4</a><br>
+    <a href="GoogleLink/linkElement.html" target="_blank">Task 5</a><br>
+    <a href="radioButton/radioButtonExample.html" target="_blank">Task 6</a><br>
+    <a href="simpleForm/simpleFormElement.html" target="_blank">Task 9</a><br>
+    <a href="highlitingText/highlighting.html" target="_blank">Task 10</a><br>
+    <a href="allInputElements/allInputElements.html" target="_blank">Task 11</a><br>
 
 </body>
 </html>
